--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+  padding: 3rem 2rem;
+  max-width: 632px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  display: inline-block;
+  width: 272px;
+  margin-bottom: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.jokes-list {
+  margin-top: 2rem;
+  text-align: left;
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.jokes-list > li {
+  padding: 1rem;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.jokes-list > li:nth-child(odd) {
+  background-color: rgba(0, 0, 0, 0.16);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.jokes-list > li:nth-child(even) {
+  background-color: rgba(0, 0, 0, 0.01);
 }
